yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app
  labels:
    name: hello-app
spec:
  type: LoadBalancer
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: http
      nodePort: 30010
    - name: metrics
      port: 8000
      targetPort: 8000
  selector:
    name: hello-app
