yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-app-ingress
spec:
  rules:
  - host: ingress.hpa-trial.suti-trial.shoot.canary.k8s-hana.ondemand.com
    http:
      paths:
        - path : /
          pathType: Exact
          backend:
            service:
              name: hello-app
              port:
                name: http
